--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,27 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<!-- Hero Start -->
+<div class="hero-header h-100">
+    <div class="h-100 bg-primary pt-5" style="padding-top:50px">
+        <div class="d-flex flex-lg-row flex-column gap-2 container g-5 pt-5">
+            <div class="g-col-lg-6 align-self-center text-center text-lg-start mb-lg-5">
+                <div class="btn btn-sm border rounded-pill text-white px-3 mb-3 animated slideInRight">#Tech</div>
+                <h1 class="display-4 text-white mb-4 animated slideInRight">Developer Tools</h1>
+                <p class="text-white mb-4 animated slideInRight">
+                    Tempor rebum no at dolore lorem clita rebum rebum ipsum
+                    rebum stet dolor sed justo kasd. Ut dolor sed magna dolor sea diam. Sit diam sit
+                </p>
+                <a href="" class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3 animated slideInRight">Read More</a>
+                <a href="" class="btn btn-outline-light py-sm-3 px-sm-5 rounded-pill animated slideInRight">Contact Us</a>
+            </div>
+            <div class="col-lg-6 align-self-end text-center text-lg-end">
+                <img class="img-fluid" src="~/imgs/hero-img.png" alt="a robot">
+            </div>
+        </div>
+    </div>
 </div>
+<!-- Hero End -->
+<section class="py-5"> 
+    <h1>Next Section</h1>
+</section>
