--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,26 +3,51 @@
 }
 
 <!-- Hero Start -->
-<div class="hero-header h-100">
+<section class="hero-header h-100">
     <div class="h-100 bg-primary pt-5" style="padding-top:50px">
         <div class="d-flex flex-lg-row flex-column gap-2 container g-5 pt-5">
             <div class="g-col-lg-6 align-self-center text-center text-lg-start mb-lg-5">
-                <div class="btn btn-sm border rounded-pill text-white px-3 mb-3 animated slideInRight">#Tech</div>
-                <h1 class="display-4 text-white mb-4 animated slideInRight">Developer Tools</h1>
-                <p class="text-white mb-4 animated slideInRight">
+                <div class="btn btn-primary border rounded-pill text-white px-3 mb-3 animated slideInRight" style="font-weight:bold;">#Tech</div>
+                <h1 class="display-4 text-white mb-4" style="font-weight: bold;">Developer Tools</h1>
+                <p class="text-white mb-4" >
                     Tempor rebum no at dolore lorem clita rebum rebum ipsum
                     rebum stet dolor sed justo kasd. Ut dolor sed magna dolor sea diam. Sit diam sit
                 </p>
-                <a href="" class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3 animated slideInRight">Read More</a>
-                <a href="" class="btn btn-outline-light py-sm-3 px-sm-5 rounded-pill animated slideInRight">Contact Us</a>
+                <a href="" class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3" style="font-weight:bold;">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="width:20px;">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
+                    </svg>
+                    Exercise
+                    
+                </a>
+                <a href="" class="btn btn-outline-light py-sm-3 px-sm-4 rounded-pill" style="font-weight:bold;"> > Ask Something</a>
             </div>
             <div class="col-lg-6 align-self-end text-center text-lg-end">
                 <img class="img-fluid" src="~/imgs/hero-img.png" alt="a robot">
             </div>
         </div>
     </div>
-</div>
+</section>
 <!-- Hero End -->
-<section class="py-5"> 
-    <h1>Next Section</h1>
+<section class="hero-header h-100" style="margin-top:100px">
+    <div class="d-flex flex-lg-row flex-column gap-5 container g-5 pt-5">
+        <div class="col-lg-6 align-self-end text-center text-lg-end">
+            <img class="img-fluid rounded" src="~/imgs/image.png" style="border-radius: 0 0 0 15%!important; overflow: hidden;" alt="a robot">
+        </div>
+        <div class="g-col-lg-6 align-self-center text-center text-lg-start mb-lg-5">
+            <div class="btn btn-primary border rounded-pill text-white px-3 mb-3 animated slideInRight" style="font-weight:bold;">#Tech</div>
+            <h1 class="display-4 text-black mb-4" style="font-weight: bold;">Motivation</h1>
+            <p class="text-black mb-4">
+                Tempor rebum no at dolore lorem clita rebum rebum ipsum
+                rebum stet dolor sed justo kasd. Ut dolor sed magna dolor sea diam. Sit diam sit
+            </p>
+            <a href="" class="btn btn-outline-dark py-sm-3 px-sm-5 rounded-pill me-3" style="font-weight:bold;">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="width:20px;">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
+                </svg>
+                Exercise
+            </a>
+            <a href="" class="btn btn-primary py-sm-3 px-sm-4 rounded-pill" style="font-weight:bold;"> > Ask Something</a>
+        </div>
+    </div>
 </section>
