--- a/Views/Tags/Index.cshtml
+++ b/Views/Tags/Index.cshtml
@@ -1,7 +1,7 @@
-﻿<section>
+﻿<section class="p-3">
     <div class="d-flex justify-content-between">
         <h1 class="">Tags:</h1>
-        <a class="btn btn-outline text-center" style="background-color:pink; color:black; width:100px" href="/Tags/New" role="button">Add Tag</a>
+        <a class="btn btn-outline-primary py-sm-3 px-sm-4 rounded-pill me-3" style="font-weight:bold;" href="/Tags/New" role="button"> + Add Tag</a>
     </div>
 
     <br />
