--- a/Views/Tags/Show.cshtml
+++ b/Views/Tags/Show.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Developer_Toolbox.Models.Tag
+<section class="class=" p-3">
 
 <h1>Tags:</h1>
 
@@ -28,3 +29,4 @@
         </div>
     </div>
 </div>
+</section>
