Modificari de design

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
                     Exercise
                     
                 </a>
-                <a href="" class="btn btn-outline-light py-sm-3 px-sm-4 rounded-pill" style="font-weight:bold;"> > Ask Something</a>
+                <a href="/Questions/Index/" class="btn btn-outline-light py-sm-3 px-sm-4 rounded-pill" style="font-weight:bold;"> > Ask Something</a>
             </div>
             <div class="col-lg-6 align-self-end text-center text-lg-end">
                 <img class="img-fluid" src="~/imgs/hero-img.png" alt="a robot">
