--- a/Views/Bookmarks/Show.cshtml
+++ b/Views/Bookmarks/Show.cshtml
@@ -3,8 +3,8 @@
 }
 <br />
 <br />
-<h2 class="text-center">Bookmarks</h2>
-
+<h1 class="gray-dark" style="">Bookmarks:</h1>
+<br />
 
 @if (TempData["message"] != null)
 {
@@ -19,17 +19,15 @@
 
         <div class="card-body">
 
-            <div class="card-text">@item.Title</div>
+            <div class="card-title"><h3>@item.Title</h3></div>
             <br />
 
-            <div class="d-flex justify-content-between flex-row mt-5">
-
-                <span class="alert-success px-1 align-content-center">@item.CreatedDate</span>
+            <div class="d-flex justify-content-between align-items-start flex-row mt-3">
+                <small class="alert-secondary">@item.CreatedDate</small>
 
                 <div class="d-flex flex-row justify-content-end">
-                    <a class="btn btn-success sirbutoane" href="/Questions/Show/@item.Id">See the question</a>
+                    <a class="btn btn-outline-primary px-3 rounded-pill mb-3" href="/Questions/Show/@item.Id">See question</a>
                 </div>
-
             </div>
 
         </div>
