--- a/Views/Questions/Edit.cshtml
+++ b/Views/Questions/Edit.cshtml
@@ -12,6 +12,7 @@
             <br />
             @Html.Editor("Title", new { htmlAttributes = new { @class = "form-control" } })
         </div>
+        <br />
         <div class="row">
             <label>Descriere</label>
             @Html.TextArea("Description", new { htmlAttributes = new { @class = "form-control" } })
@@ -20,7 +21,7 @@
 
         <br /><br />
 
-        <button class="btn btn-success" type="submit">Save changes</button>
+        <button class="btn btn-primary px-3 rounded-pill mb-3" type="submit">Save changes</button>
 
     </div>
 
