--- a/Views/Questions/Index.cshtml
+++ b/Views/Questions/Index.cshtml
@@ -3,7 +3,8 @@
 }
 <br />
 <br />
-<h2 class="text-center">Questions</h2>
+<h1 class="gray-dark" style="">Questions:</h1>
+<br />
 
 
 @if (TempData["message"] != null)
@@ -13,14 +14,17 @@
     </div>
 }
 
-@* Motorul de cautare *@
+<!-- Motorul de cautare -->
+<div>
 <form method="GET">
     <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Search topics or keywords" name="search"
-               value="@ViewBag.SearchString">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <input type="text" class="form-control" placeholder="Search topics or keywords" name="search" value="@ViewBag.SearchString">
+        <button class="btn btn-outline-primary" type="submit">Search</button>
     </div>
 </form>
+ </div>
+
+
 
 @if (ViewBag.AreProfil==true || true)
 {
@@ -33,22 +37,22 @@
         <form method="post" action="/Questions/New">
 
             <div class="card-body">
-                <h4>Ask a new question</h4>
+                <div class="box-shadow bg-primary row"><h3 style="color:white">Ask a new question</h3></div>
                 <br />
 
                 <div class="row">
                     <label>Title</label>
-                    <input class="form-control" name="Title"></input>
+                    <input class="form-control border-primary" name="Title"></input>
                 </div>
 
                 <div class="row">
                     <label>Description</label>
-                    <textarea class="form-control" name="Description"></textarea>
+                    <textarea class="form-control border-primary" name="Description"></textarea>
                 </div>
 
                 <br /><br />
 
-                <button class="btn btn-success" type="submit">Post</button>
+                <button class="btn btn-primary px-3 rounded-pill mb-3" type="submit">Post</button>
 
             </div>
 
@@ -105,28 +109,22 @@
 
         <div class="card-body">
 
-            <div class="card-text">@item.Title</div>
-
-            <div class="card-text">@item.Description</div>
+            <div class="card-title"><h3>@item.Title</h3></div>
             <br /> <br />
 
 
-            <div class="d-flex justify-content-between flex-row mt-5">
-
-
-                <span class="alert-success px-1 align-content-center">@item.CreatedDate</span>
+            <div class="d-flex justify-content-between align-items-start flex-row mt-3">
+                <small class="alert-secondary">@item.CreatedDate</small>
 
                 <div class="d-flex flex-row justify-content-end">
-                    <a class="btn btn-success sirbutoane" href="/Questions/Show/@item.Id">See question</a>
+                    <a class="btn btn-outline-primary px-3 rounded-pill mb-3" href="/Questions/Show/@item.Id">See question</a>
                 </div>
-
             </div>
+
 
         </div>
 
     </div>
-
-    <br />
     <br />
 
 }
