--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
                     Tempor rebum no at dolore lorem clita rebum rebum ipsum
                     rebum stet dolor sed justo kasd. Ut dolor sed magna dolor sea diam. Sit diam sit
                 </p>
-                <a href="" class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3" style="font-weight:bold;">
+                <a href="/Categories/Index" class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3" style="font-weight:bold;">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="width:20px;">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
                     </svg>
