--- a/Views/Categories/New.cshtml
+++ b/Views/Categories/New.cshtml
@@ -16,25 +16,17 @@
                     @Html.ValidationMessageFor(m => m.CategoryName, null, new{ @class = "text-danger"})
 
                     <div>
-                        <div>
-                            <label for="file">Upload Logo</label>
-                            <input type="file" id="file" name="file" />
-                            @Html.ValidationMessage("Logo", null, new { @class = "text-danger" })
-                        </div>
+                        <label for="file">Upload Logo</label>
+                        <input type="file" id="file" name="file" style="margin:1em" />
+                        @Html.ValidationMessage("Logo", null, new { @class = "text-danger" })
                     </div>
 
                 </div>
 
-                <button class="btn btn-outline" style="background-color:#eee; color:black;" type="submit">Add Category</button>
+                <button class="btn btn-outline" style="background-color:#0d6efd; color:white;" type="submit">Add Category</button>
             </form>
         </div>
     </div>
 </div>
-
-
-
-
-
-
 
 
