--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <a class="nav-link text-white" style="font-weight:bold;" asp-area="" asp-controller="Solutions" asp-action="Index">Solutions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Practice</a>
+                            <a class="nav-link text-white" style="font-weight:bold;" asp-area="" asp-controller="Categories" asp-action="Index">Practice</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
