updated nav links

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,8 +10,7 @@
                 <div class="btn btn-primary border rounded-pill text-white px-3 mb-3 animated slideInRight" style="font-weight:bold;">#Tech</div>
                 <h1 class="display-4 text-white mb-4" style="font-weight: bold;">Developer Tools</h1>
                 <p class="text-white mb-4" >
-                    Tempor rebum no at dolore lorem clita rebum rebum ipsum
-                    rebum stet dolor sed justo kasd. Ut dolor sed magna dolor sea diam. Sit diam sit
+                    A toolbox featuring a public chat and a dedicated exercise space. Streamline your development process and elevate your coding skills.
                 </p>
                 <a href="/Categories/Index" class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3" style="font-weight:bold;">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="width:20px;">
