--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" style="font-weight:bold;" asp-area="" asp-controller="Categories" asp-action="Index">Practice</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" style="font-weight:bold;" asp-area="" asp-controller="ApplicationUsers" asp-action="Index">Users</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
