Modificari TempData si Navbar

--- a/Views/ApplicationUsers/Edit.cshtml
+++ b/Views/ApplicationUsers/Edit.cshtml
@@ -4,7 +4,7 @@
 }
 
 <br />
-<h2>Edit your profile! </h2>
+<h2>Edit Profile <i class="bi bi-pencil-square"></i></h2>
 <hr/>
 
 @using (Html.BeginForm(actionName: "Edit", controllerName: "ApplicationUsers",
@@ -54,8 +54,8 @@
     <br />
 
 
-    <span style="color: white;">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</span>
-    <button class="btn btn-success" type="submit">Apply Changes</button>
+    <span style="color: white;">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</span>
+    <button class="btn btn-primary" type="submit">Apply Changes</button>
 
 
 }
