--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity;
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -35,7 +39,7 @@
                             <a class="nav-link text-white" style="font-weight:bold;" asp-area="" asp-controller="ApplicationUsers" asp-action="Index">Users</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" style="font-weight:bold;" asp-area="" asp-controller="ApplicationsUsers" asp-action="Show">My Profile</a>
+                            <a class="nav-link text-white" style="font-weight:bold;" href="/ApplicationUsers/Show/@UserManager.GetUserId(User)">My Profile</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" style="font-weight:bold;" asp-area="" asp-controller="Categories" asp-action="Index">Practice</a>
