--- a/Views/Categories/Show.cshtml
+++ b/Views/Categories/Show.cshtml
@@ -20,13 +20,16 @@
             </div>
             <div class="d-flex align-items-center justify-content-between m-2">
 
-                <a class="btn alert-success" href="/Categories/Edit/@Model.Id">Edit Category</a>
+                @if (Model.UserId == ViewBag.CurrentUser || ViewBag.IsAdmin)
+                {
+                    <a class="btn alert-success" href="/Categories/Edit/@Model.Id">Edit Category</a>
 
-                <form method="post" action="/Categories/Delete/@Model.Id">
+                    <form method="post" action="/Categories/Delete/@Model.Id">
 
-                    <button class="btn btn-danger" type="submit">Delete Category</button>
+                        <button class="btn btn-danger" type="submit">Delete Category</button>
 
-                </form>
+                    </form>
+                }
 
             </div>
 
