--- a/Views/Exercises/Show.cshtml
+++ b/Views/Exercises/Show.cshtml
@@ -1,6 +1,10 @@
 ﻿@model Developer_Toolbox.Models.Exercise
 
 <section class="d-flex gap-2">
+    @if (TempData.ContainsKey("message"))
+    {
+        <h4 class="@ViewBag.MessageType p-3 rounded-3 text-center mb-5">@ViewBag.Message</h4>
+    }
     <div class="w-50 m-5">
         <div class="card product">
             <div class="bg-image hover-zoom ripple" data-mdb-ripple-color="light">
@@ -19,7 +23,10 @@
                 <div>
                     <h6>@Model.Category.CategoryName</h6>
                     <h6><small>Posted on: @Model.Date</small></h6>
-                    @*<h6><small>Posted by: @Model.User.FirstName @Model.User.LastName</small></h6>*@
+                    @if (ViewBag.CompleteProfile)
+                    {
+                        <h6><small>Posted by: @Model.User.FirstName @Model.User.LastName</small></h6>
+                    }
                 </div>
 
                 <div>
@@ -38,17 +45,20 @@
                 </div>
 
             </div>
-            <div class="d-flex align-items-center justify-content-between m-2">
+            @if (ViewBag.CurrentUser == Model.UserId || ViewBag.IsAdmin)
+            {
+                <div class="d-flex align-items-center justify-content-between m-2">
 
-                <a class="btn alert-success" href="/Exercises/Edit/@Model.Id">Edit Exercise</a>
+                    <a class="btn alert-success" href="/Exercises/Edit/@Model.Id">Edit Exercise</a>
 
-                <form method="post" action="/Exercises/Delete/@Model.Id">
+                    <form method="post" action="/Exercises/Delete/@Model.Id">
 
-                    <button class="btn btn-danger" type="submit">Delete Exercise</button>
+                        <button class="btn btn-danger" type="submit">Delete Exercise</button>
 
-                </form>
+                    </form>
 
-            </div>
+                </div>
+            }
 
         </div>
 
