--- a/Views/Questions/Index.cshtml
+++ b/Views/Questions/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿<div class="p-3">
+@{
     ViewBag.Title = "Index";
 }
 <br />
@@ -77,7 +78,10 @@
            
             <div class="d-flex justify-content-between align-items-start flex-row mt-3">
                 <small class="alert-secondary">@item.Question.CreatedDate</small>
-
+                    @foreach (var questionTag in item.Tags)
+                    {
+                        <a asp-action="Show" asp-controller="Tags" asp-route-id="@questionTag.Id" class="btn btn-outline-info border rounded-pill text-black px-3 mb-3 animated slideInRight" style="font-weight:bold;">#@questionTag.Name</a>
+                    }
                 <div class="d-flex flex-row justify-content-end">
                     <a class="btn btn-outline-primary px-3 rounded-pill mb-3" href="/Questions/Show/@item.Question.Id">See question</a>
                 </div>
