--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -85,8 +85,8 @@
     @*<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.33.2/src-min-noconflict/ace.js"></script>*@
     <script src="~/js/ace.js" asp-append-version="true"></script>
     @*<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.33.2/src-min-noconflict/mode-javascript.js"></script>*@
-    <script src="~/Ace/src/mode-javascript.js" asp-append-version="true"></script>
     <script src="~/Ace/src/mode-python.js" asp-append-version="true"></script>
+    <script src="~/Ace/src/mode-c_cpp.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
