--- a/Views/Exercises/Show.cshtml
+++ b/Views/Exercises/Show.cshtml
@@ -67,10 +67,14 @@
         </div>
     </div>
 
-    <div id="editor" class="my-5 mx-2" style="grid-area: Editor">def add(x,y):   
-    return x + y
-    </div>
+    <div id="editor" class="my-5 mx-2" style="grid-area: Editor"></div>
     <br />
+    <div class="d-flex gap-1 justify-content-start mt-2">
+        @Html.DropDownList("ProgrammingLanguage",
+        (IEnumerable<SelectListItem>)ViewBag.ProgrammingLanguagesList,
+        new { @class = "form-control", @id = "langList" }
+        )
+    </div>
     <button formaction="/Exercises/Show" id="submit" class="btn btn-success" type="submit">Submit</button>
     <br />
     @if (!string.IsNullOrEmpty(ViewBag.Result))
@@ -89,16 +93,30 @@
         </div>
     }
 </section>
+<script src="~/Ace/src/ace.js"></script>
 
 <script type="text/javascript">
 
+    var editor = ace.edit("editor");
+    editor.setTheme("ace/theme/tomorrow");
+    editor.setFontSize(20);
+    const python = ace.createEditSession("def add(x,y):\n    return x + y", "ace/mode/python");
+    const cpp = ace.createEditSession("#include <iostream>\nusing namespace std;\n\nint main() {\n   int a, b;\n   cin >> a >> b;\n   cout << a+b;\n   return 0;\n}", "ace/mode/c_cpp");
+    editor.setSession(python);
+
     const element = document.getElementById("submit");
     element.addEventListener("click", getCode);
+ 
+    const langDropdown = document.getElementById("langList");
+    langDropdown.addEventListener("change", changeLang);
 
     async function getCode() {
+        console.log(editor.getValue());
+        const pr = document.getElementById("langList").value;
+
         var data = editor.getValue();
         try {
-            const res = await $.post("/Exercises/ExecuteCode", { id: @Model.Id, solution: data });
+            const res = await $.post("/Exercises/ExecuteCode", { id: @Model.Id, solution: data, language: pr });
             if (res.status === 200) {
                 showSuccess()
             } else {
@@ -110,6 +128,17 @@
         }
         
         console.log('not awaited')
+    }
+
+    function changeLang() {
+        const pr = document.getElementById("langList").value;
+        if(pr == "cpp") {
+            editor.setSession(cpp);
+        }
+        else if (pr == "python") {
+            editor.setSession(python);
+        }    
+        console.log(pr);
     }
 
     function showSuccess() {
