Fixed users show error

--- a/Views/Questions/Show.cshtml
+++ b/Views/Questions/Show.cshtml
@@ -164,7 +164,7 @@
                 <form method="post" action="/Answers/New">
                     <div class="card-body">
                         <input type="hidden" name="QuestionId" value="@ViewBag.Question.Id" />
-                        <label>Content</label>
+                        <label>Comment</label>
                         <br />
                         <textarea class="form-control" name="Content"></textarea>
                         <br />
