--- a/Views/ApplicationUsers/Show.cshtml
+++ b/Views/ApplicationUsers/Show.cshtml
@@ -10,8 +10,6 @@
         @ViewBag.Message
     </div>
 }
-
-
 <br />
 
 
@@ -75,39 +73,33 @@
     </div>
 </div>
 
-
 </br>
-
-
-
 
 @*Afisare raspunsuri si intrebari postate*@
 
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="p-3 border bg-light"><b>Questions</b></div>
-                        @foreach (var question in ViewBag.Questions)
-                        {
-                                <div class="card mb-3"> 
-                                        <div class="card-body text-primary">
-                                                <div class="card-text" ><a href="/Questions/Show/@question.Id">@question.Description </a> </div> 
-                                    </div>
-                                </div>
-                        }
-                        
-                         
+            <div class="p-3 border bg-light"><b>Questions</b></div>
+                @foreach (var question in ViewBag.Questions)
+                {
+                    <div class="card mb-3"> 
+                            <div class="card-body text-primary">
+                                    <div class="card-text" ><a href="/Questions/Show/@question.Id">@question.Description </a> </div> 
+                        </div>
+                    </div>
+                }
             </div>
 
             <div class="col-md-6">
                 <div class="p-3 border bg-light"><b>Answers</b></div>
             @foreach (var answer in ViewBag.Answers)
             {
-                                    <div class="card mb-3"> 
-                                            <div class="card-body text-primary">
-                                                    <div class="card-text" ><a href="/Answers/Show/@answer.Id">@answer.Description </a> </div> 
-                                        </div>
-                                    </div>
+                <div class="card mb-3"> 
+                    <div class="card-body text-primary">
+                        <div class="card-text" ><a href="/Answers/Show/@answer.Id">@answer.Content </a> </div> 
+                    </div>
+                </div>
             }
             </div>
         </div>
