--- a/Views/Questions/Show.cshtml
+++ b/Views/Questions/Show.cshtml
@@ -73,7 +73,7 @@
                                 <a class="btn btn-secondary px-3 rounded-pill mb-3" href="/Bookmarks/Unsave?questionId=@ViewBag.Question.Id">Unsave</a>
                             }
 
-                            <div class="d-flex flex-row justify-content-end">
+                            <div class="d-flex flex-row gap-3 justify-content-end">
                                 @if(!ViewBag.Liked)
                                 {
                                     <!-- Buton pentru like -->
